# adventofcode2024

./: LICENSE  meson.build
day1/: day1.cpp  day1b.cpp  meson.build
day2/: day2.cpp  day2b.cpp  meson.build
day3/: day3.cpp  day3b.cpp  meson.build
day4/: day4.cpp  day4b.cpp  meson.build
